<resources>
    <string name="app_name">Edoofun</string>
    <string name="button">Button</string>
    <string name="login">Login</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login_with_g_mail">LOGIN WITH G-MAIL</string>
    <string name="buat_akun">Buat Akun</string>
    <string name="lupa_kata_sandi">Lupa Kata Sandi?</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="nama_pengguna">Nama Pengguna</string>
    <string name="label_header_pilihan">Keahlian Apa Yang Anda Minati?</string>
    <string name="label_desc_1">Pilih 1 atau lebih untuk membuat</string>
    <string name="label_desc_2">rekomendasi keahlian sesuai dengan pilihanmu</string>
    <string name="minat_jaipong">minat_jaipong</string>
    <string name="tari_jaipong">Tari Jaipong</string>
    <string name="tari">tari</string>
    <string name="memancing">Memancing</string>
    <string name="bersepeda">Bersepeda</string>
    <string name="menjahit">Menjahit</string>
    <string name="piano">Piano</string>
    <string name="bermain_gitar">Bermain Gitar</string>
    <string name="memasak">Memasak</string>
    <string name="diving">Diving</string>
    <string name="menyanyi">Menyanyi</string>
    <string name="gitar">Gitar</string>
    <string name="bermain_piano">Bermain Piano</string>
    <string name="basket">Basket</string>
    <string name="bermain_basket">Bermain Basket</string>
    <string name="silat">Silat</string>
    <string name="tendang">tendang</string>
    <string name="pencak_silat">Pencak Silat</string>
    <string name="bola_tendang">Bola Tendang</string>
    <string name="memanah">Memanah</string>
    <string name="baseball">Baseball</string>
    <string name="enter_arrow">enter_arrow</string>

    <string name="email">Email</string>
    <string name="registrasi">Registrasi</string>
    <string name="tulisulang">Tulis Ulang Password</string>
    <string name="notification">Notification</string>
    <string name="sosial">Sosial</string>
    <string name="shop">Shop</string>
    <string name="home">Home</string>
    <string name="akun">Akun</string>
    <string name="lihat_semua">Lihat semua</string>
    <string name="kategori">Kategori</string>
    <string name="ic_nyanyi">Nyanyi</string>
    <string name="ic_basket">Basket</string>
    <string name="ic_memasak">Memasak</string>
    <string name="ic_blowling">Blowling</string>
    <string name="ic_rafting">Rafting</string>
    <string name="ic_snorking">Snorking</string>
    <string name="title_toolbar">EDOOFUN</string>
    <string name="judul_kursus">Judul Kursus</string>


    <string name="title_home">HOME</string>
    <string name="title_pembelian">PEMBELIAN</string>
    <string name="title_sosial">SOSIAL</string>
    <string name="title_notifikasi">NOTIFIKASI</string>
    <string name="title_akun">AKUN</string>
    <string name="logo">logo</string>
    <string name="pembelian_koin">PEMBELIAN KOIN</string>
    <string name="atm_internet_banking"><![CDATA[ATM & Internet Banking]]></string>

    <!-- nirwana -->
    <string name="forget_password_instruction_text">Masukan e-mail yang terkait dengan akun
anda dan kami akan mengirimi anda
tautan untuk mereset kata sandi</string>
    <string name="forget_password_error_text_email_is_required">E-mail is required</string>
    <string name="forget_password_error_text_email_not_found">E-mail tidak ditemukan</string>
    <string name="title_lomba_mewarnai">Lomba Mewarnai</string>
    <string name="deskripsi_lomba_mewarnai">Di hari pendidikan ini, kami menghadirkan lomba mewarnai tingkat TK dan SD.</string>
    <string name="date_lomba_mewarnai">Minggu, 12 Maret 2017</string>
    <string name="fee_lomba_mewarnai">20.000</string>

    <string name="title_lomba_basketball">Lomba basketball</string>
    <string name="deskripsi_lomba_basketball">Baketball camp come back!! daftarkan dirimu jangan sampai terlewatkan</string>
    <string name="date_lomba_basketball">Minggu, 12 Maret 2017</string>
    <string name="fee_lomba_basketball">250.000</string>
</resources>
