<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/home" />

    <item
        android:id="@+id/navigation_pembelian"
        android:icon="@drawable/pembelian"
        android:title="@string/title_pembelian" />

    <item
        android:id="@+id/navigation_sosial"
        android:icon="@drawable/sosial"
        android:title="@string/title_sosial" />

    <item
        android:id="@+id/navigation_notifikasi"
        android:icon="@drawable/notifikasi"
        android:title="@string/title_notifikasi" />

    <item
        android:id="@+id/navigation_akun"
        android:icon="@drawable/profil"
        android:title="@string/title_akun" />

</menu>