<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/home_menu"
        android:title="@string/home"
        android:icon="@drawable/ic_home"
        />

    <item
        android:id="@+id/keranjang_menu"
        android:title="@string/shop"
        android:icon="@drawable/ic_keranjang"
        />

    <item
        android:id="@+id/sosial_menu"
        android:title="@string/sosial"
        android:icon="@drawable/ic_sosial"
        />

    <item
        android:id="@+id/notif_menu"
        android:title="@string/notification"
        android:icon="@drawable/ic_notif"
        />

    <item
        android:id="@+id/account_menu"
        android:title="@string/akun"
        android:icon="@drawable/ic_account"
        />


</menu>

